# bakalauras-mapper

./: .gitignore  pylintrc  pyproject.toml
mapper/: crop.py  mapper.py
